<resources>
    <string name="app_name">EducationApp</string>
    <string name="hi_student">Hi, Student!</string>
    <string name="classes">Classes</string>
    <string name="homework">HomeWork</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">settings</string>
    <string name="menu_profile">Profile</string>
    <string name="home_tab">Home</string>
    <string name="classes_tab">Classes</string>
    <string name="favourite_tab">Favourite</string>
    <string name="notes_list_tab">Notes</string>
    <string name="history">History</string>
    <string name="lesson_time">8.00–8.45</string>
    <string name="skype_open_in">Open In</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="greetings">Hi, Student!</string>
</resources>