<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/user"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/menu_profile" />
</menu>