<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="28dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="@dimen/cardview_default_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/lessonImage"
            android:layout_width="26dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_baseline_temple_buddhist_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lessonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/history"
            app:layout_constraintBottom_toTopOf="@id/lessonTime"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintStart_toEndOf="@+id/lessonImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lessonTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/lesson_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline"
            app:layout_constraintStart_toEndOf="@+id/lessonImage"
            app:layout_constraintTop_toBottomOf="@id/lessonTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

        <View
            android:id="@+id/skypeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_baseline_video_call_24"
            app:layout_constraintBottom_toBottomOf="@+id/skypeView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:text="@string/skype_open_in"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>